<resources>
    <string name="app_name">Breaking Light</string>
    <string name="button_start">Start</string>
    <string name="button_exit">Exit</string>
    <string name="score_text">Your score:</string>
    <string name="button_back_to_menu">Back to menu</string>
    <string name="button_retry">Retry</string>
    <string name="game_over">Game Over</string>
    <string name="score">Score:</string>
    <string name="timer">Timer:</string>
    <string name="exitText">Exit: Are you sure?</string>
    <string name="yes">Yes!</string>
    <string name="no">No</string>
    <string name="exitMessage">Press once again to exit!</string>
    <string name="settings">Settings</string>
    <string name="languageTextView">Language</string>
    <string name="failedToSave">Failed to save</string>
    <string name="bestPlayers">Best Players:</string>
    <string name="savedSuccess">was saved successfully.</string>
    <string name="errorNameMessage">Name size must be more that 3 symbols.</string>
    <string name="failedToLoadSong">"Failed to load song file."</string>

    <string-array name="languages">
        <item>English</item>
        <item>Русский</item>
    </string-array>

</resources>
