<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.application.ayakimenko.breakinglight.activity.SettingsActivity">

    <TextView
        android:id="@+id/textSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/languageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/languageSpinner"
        android:layout_below="@+id/textSettings"
        android:layout_marginTop="50dp"
        android:text="@string/languageTextView" />

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:spinnerMode="dropdown"
        android:entries="@array/languages"
        android:layout_below="@+id/languageView"
        android:layout_alignStart="@+id/textSettings" />

    <Button
        android:text="@string/button_back_to_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="130dp"
        android:onClick="backToMenu"
        android:id="@+id/backToMenu"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/languageSpinner" />

</RelativeLayout>
