<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:background="@drawable/background"
    tools:context="com.application.ayakimenko.breakinglight.activity.ResultActivity">

    <TextView
        android:id="@+id/scoreText"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/retry"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:text="@string/score_text" />

    <Button
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/back"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:onClick="onClickRetry"
        android:text="@string/button_retry" />

    <TextView
        android:id="@+id/gameOverView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:text="@string/game_over"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/bestPlayersView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/gameOverView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/bestPlayers" />

    <EditText
        android:id="@+id/player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/player1"
        android:layout_below="@+id/player1"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/scoreView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/retry"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="113dp"
        android:onClick="onClickBackToMenu"
        android:text="@string/button_back_to_menu" />

    <EditText
        android:id="@+id/player3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:layout_below="@+id/player2"
        android:layout_alignStart="@+id/player2"
        android:text="test" />

    <TextView
        android:text="3:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_alignBaseline="@+id/player3"
        android:layout_alignBottom="@+id/player3"
        android:layout_alignEnd="@+id/textView6" />

    <TextView
        android:text="2:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_alignBaseline="@+id/player2"
        android:layout_alignBottom="@+id/player2"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:text="1:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_alignBaseline="@+id/player1"
        android:layout_alignBottom="@+id/player1"
        android:layout_toStartOf="@+id/player1" />

    <EditText
        android:id="@+id/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/bestPlayersView"
        android:layout_alignStart="@+id/gameOverView" />

</RelativeLayout>
